soroban-sdk/tests/compile_fails/contracttype_lib_deprecated.stderr
error: use of deprecated constant `__SOROBAN_LIB_ARG_DEPRECATED_FOR_S`: `lib` is deprecated and will be removed in a future release
 --> tests/compile_fails/contracttype_lib_deprecated.rs:9:12
  |
9 | pub struct S {
  |            ^
  |
note: the lint level is defined here
 --> tests/compile_fails/contracttype_lib_deprecated.rs:4:9
  |
4 | #![deny(deprecated)]
  |         ^^^^^^^^^^

error: use of deprecated constant `__SOROBAN_LIB_ARG_DEPRECATED_FOR_E`: `lib` is deprecated and will be removed in a future release
  --> tests/compile_fails/contracttype_lib_deprecated.rs:16:10
   |
16 | pub enum E {
   |          ^

error: use of deprecated constant `__SOROBAN_LIB_ARG_DEPRECATED_FOR_Ev`: `lib` is deprecated and will be removed in a future release
  --> tests/compile_fails/contracttype_lib_deprecated.rs:21:12
   |
21 | pub struct Ev {
   |            ^^
